// Copyright 2022 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.reporting;

option java_package = "org.wfanet.measurement.internal.reporting";
option java_multiple_files = true;

// Proto representation of the internal ReportingSet entity type.
message ReportingSet {
  // `MeasurementConsumer` ID from the CMMS public API.
  string measurement_consumer_reference_id = 1;
  fixed64 external_reporting_set_id = 2;

  message EventGroupKey {
    // `MeasurementConsumer` ID from the CMMS public API.
    string measurement_consumer_reference_id = 1;
    // `DataProvider` ID from the CMMS public API.
    string data_provider_reference_id = 2;
    // `EventGroup` ID from the CMMS public API.
    string event_group_reference_id = 3;
  }
  repeated EventGroupKey event_group_keys = 3;

  // CEL filter predicate.
  string filter = 4;
  string display_name = 5;
}
